--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="icon" href="images/favicon.png" sizes="32x32">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>Candy Crush Online|Candy Crush Unblocked Play At candy-crush-online.github.io</title>
+		<title>New Tab</title>
 				<meta name="description" content="Candy Crush on Chromebook serves sweet puzzle challenges. Match candies, conquer levels, and indulge in this addictive, match-three game, now easily enjoyed on your Chromebook.">
 
 			<meta property="og:url" content="candy-crush-online.github.io" />
