--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>New Tab</title>
 				<meta name="description" content="Candy Crush on Chromebook serves sweet puzzle challenges. Match candies, conquer levels, and indulge in this addictive, match-three game, now easily enjoyed on your Chromebook.">
 
-			<meta property="og:url" content="candy-crush-online.github.io" />
+			<meta property="og:url" content="potato-crush-online.github.io" />
       <meta property="og:image:width" content="200 px" />
       <meta property="og:image:height" content="200 px" />
-      <meta property="og:title" content="candy-crush-online.github.io" />
+      <meta property="og:title" content="potato-crush-online.github.io" />
       <meta property="og:site_name" content="candy-crush-online.github.io" />
       <meta property="og:description" content="Candy Crush on Chromebook serves sweet puzzle challenges. Match candies, conquer levels, and indulge in this addictive, match-three game, now easily enjoyed on your Chromebook." />
       <meta property="og:type" content="website" />
